--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 #application
 spring.application.name=DEPARTMENT-SERVICE
 
-#MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.username=root
-spring.datasource.password=lamdz2k4
-#Spring data JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-#eureka
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#config server
+spring.config.import=optional:configserver:http://localhost:8888
+##MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+#spring.datasource.username=root
+#spring.datasource.password=lamdz2k4
+##Spring data JPA
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#
+##eureka
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
